# tensorflow-tutorials

src/: pyproject.toml
src/basics/: .gitignore  autodiff.ipynb  basic_training_loops.ipynb  eager.ipynb  intro_to_graphs.ipynb  intro_to_modules.ipynb  tensor.ipynb  variable.ipynb
src/generative/: autoencoder.ipynb  dcgan.ipynb  deepdream.ipynb  pix2pix.ipynb
src/images/: classification.ipynb  cnn.ipynb  data_augmentation.ipynb  transfer_learning.ipynb  transfer_learning_with_hub.ipynb
src/load_preprocessing/: .gitignore  csv.ipynb  images.ipynb  numpy.ipynb  pandas_dataframe.ipynb  text.ipynb  tfrecord.ipynb
src/ml_basics_keras/: .gitignore  classification.ipynb  custom_callback.ipynb  custom_layers_and_models.ipynb  customizing_what_happens_in_fit.ipynb  functional.ipynb  keras_tuner.ipynb  masking_and_padding.ipynb  overfit_and_underfit.ipynb  preprocessing_layers.ipynb  regression.ipynb  rnn.ipynb  save_and_load.ipynb  save_and_serialize.ipynb  sequential_model.ipynb  text_classification.ipynb  text_classification_with_hub.ipynb  train_and_evaluate.ipynb  transfer_learning.ipynb  writing_a_training_loop_from_scratch.ipynb
src/quickstart/: advanced.ipynb  beginner.ipynb
src/recommenders/: basic_ranking.ipynb  basic_retrieval.ipynb  context_features.ipynb  dcn.ipynb  deep_recommenders.ipynb  efficient_serving.ipynb  featurization.ipynb  multitask.ipynb  quickstart.ipynb
src/structured_data/: .gitignore  feature_columns.ipynb  imbalanced_data.ipynb  preprocessing_layers.ipynb  time_series.ipynb
src/tensorboard/: .gitignore  get_started.ipynb  graphs.ipynb  (+3 more)
(+14 files in other folders)
